2006-05-16  Luc Pionchon  <luc.pionchon@nokia.com>

	* hildon-widgets/gtk-infoprint.c (gtk_confirmation_banner): added
	bold markup for backward compatibility. NB#28370


2006-05-15  Luc Pionchon  <luc.pionchon@nokia.com>

	* configure.ac: 0.12.15


2006-05-15  Johan Bilien  <johan.bilien@nokia.com>

	* hildon-widgets/hildon-window.[ch]:
	  - Added clipboad_operation signal used by osso-browser to receive
	    clipborad operations from hildon-input-method
	  - Trigger this signal when we receive an clipboard X message
	    from HIM.

2006-05-11  Luc Pionchon  <luc.pionchon@nokia.com>

	* hildon-widgets/hildon-caption.c
	(hildon_caption_set_label_alignment)
	(hildon_caption_get_label_alignment): added gtk-doc "Since" marker

	* doc/hildon-libs-docs.sgml: added index for 0.12.0 new symbols


2006-05-10  Luc Pionchon  <luc.pionchon@nokia.com>

	* hildon-widgets/hildon-time-editor.c:
	(hildon_time_editor_set_ticks) removed block signal handler for
	hildon_time_editor_inserted_text. Added block and unblock signal
	handler for hildon_time_editor_entry_focusout.

	NB#28027

2006-05-10  Luc Pionchon  <luc.pionchon@nokia.com>

	* hildon-widgets/hildon-caption.c:
	(hildon_caption_size_allocate): add a margin to the start position
	of the caption_area (HILDON_CAPTION_SPACING), leaving this way the
	space required to the left of the caption.

	(hildon_caption_expose): allocation, subtract the left margin
	which we have added to the children widgets when we paint the
	selection box.
       	
	NB#28483

3006-05-10 Tapani Palli <tapani.palli@nokia.com>

	* hildon-widgets/hildon-time-editor.c:
	block signal handler for hildon_time_editor_inserted_text

	NB#28679

2006-05-09  Luc Pionchon  <luc.pionchon@nokia.com>

	* hildon-widgets/hildon-time-editor.c:
	(_hildon_time_editor_get_time_separators) renamed from
	_get_time_separator(). Refactored to return h-m and m-s
	separators. Now it is independent of the time editor priv
	structure and receives two labels that can be NULL.
